Add slashes to src files

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Adrian Woźniczko</title>
     <link rel="icon" href="images/play.svg">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +42,7 @@
 
         <article>
             <div class="aboutme">
-                <img src="images/my-photo.jpg" alt="My photo">
+                <img src="/images/my-photo.jpg" alt="My photo">
                 <div class="text">
                     <p>Jestem UI/UX designerem, urodziłem się i mieszkam w Krakowie.</p>
                     <p>Po studiach szukałem swojego miejsca w świecie stron i aplikacji. Jako freelancer w ramach zleceń oraz projektów non-profit pisałem strony internetowe, projektowałem logo oraz tworzyłem projekty graficzne stron i aplikacji. Dzisiaj zajmuję się projektowaniem doświadczeń użytkownika.</p><p>Mając na uwadze cele marketingowe i biznesowe klienta chcę tworzyć doświadczenia i interfejsy, które spełniają potrzeby użytkowników. UI/UX design to dla mnie praca, która pozwala spełniać się kreatywnie. Projektowanie daje mi dużą przyjemność, a świadomość, że tworzę moje projekty w oparciu o ludzkie potrzeby daje mi jeszcze większą satysfakcję.</p>
