--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="slider">
             <main>
                 <div class="text">
-                    <h1>Pomogę Ci pogłębić <br>relacje między Twoim <br>produktem-klientami.</h1>
+                    <h1>Pomogę Ci pogłębić <br>relacje pomiędzy Twoim <br>produktem a klientami.</h1>
                     <h2>Projektuję aplikacje, strony internetowe, <br>tworzę doświadczenia użytkownika</h2>
                     <button><a href="#portfolio" class="main-button"><span></span>Portfolio</a></button>
                 </div>
